# formbridge

./: .gitignore  CHANGELOG.md  CONNECTORS.md  PHASE1_STATUS.md  README.md  formbridge.toml.example  pyproject.toml  run_tests.sh  verify_connectors.py
.github/workflows/: test.yml
docs/internal/decisions/: 000-adr-template.md  001-vision-augmented-label-extraction.md  002-replace-llm-providers-with-litellm.md  README.md
src/formbridge/: __init__.py  cli.py  diff.py  llm.py  mapper.py  mcp_server.py  models.py  parser.py  scanner.py  templates.py  viewer.py  vision.py  writer.py
src/formbridge/connectors/: __init__.py  mercury.py  wise.py
src/formbridge/viewer_assets/: index.html
tests/: conftest.py  create_test_pdfs.py  download_fixtures.py  test_connectors.py  test_diff.py  test_mapper.py  test_mcp_server.py  test_parser.py  test_scanner.py  test_templates.py  test_viewer.py  test_vision.py  test_writer.py
tests/fixtures/: f1065_schema.json
