[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formbridge"
version = "0.2.0"
description = "Instruction-aware PDF form filling for LLMs and humans"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nilsy", email = "nilsyai@users.noreply.github.com" }
]
maintainers = [
    { name = "Nilsy", email = "nilsyai@users.noreply.github.com" }
]
keywords = [
    "pdf",
    "form-filling",
    "ocr",
    "llm",
    "tax",
    "automation",
    "mcp",
    "ai",
    "claude",
    "openai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "litellm>=1.50.0",
    "pydantic>=2.0.0",
    "pdfplumber>=0.10.0",
    "pikepdf>=8.0.0",
    "rich>=13.0.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",
]
mcp = [
    "mcp>=1.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
all = [
    "formbridge[ocr,mcp]",
]

[project.scripts]
formbridge = "formbridge.cli:main"

[project.urls]
Homepage = "https://github.com/nilsyai/formbridge"
Documentation = "https://github.com/nilsyai/formbridge#readme"
Repository = "https://github.com/nilsyai/formbridge"
Issues = "https://github.com/nilsyai/formbridge/issues"
Changelog = "https://github.com/nilsyai/formbridge/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/formbridge"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/formbridge.toml.example",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
